--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ VITE_FIREBASE_APP_ID=your_app_id
 
 # Gemini AI API Key
 VITE_GEMINI_API_KEY=AIzaSyC1GFuvbuFw62XwCDvmcp6DC7wPt_366Zc
-
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_Y2xpbWJpbmctc2F3ZmlzaC03NC5jbGVyay5hY2NvdW50cy5kZXYk
 # Note: To get your free Gemini API key:
 # 1. Go to https://makersuite.google.com/app/apikey
 # 2. Sign in with your Google account
